--- a/PPMToolFullStack/src/main/resources/application.properties
+++ b/PPMToolFullStack/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# Datasource
-spring.datasource.url= jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ppmtool
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL80Dialect
+spring.jpa.hibernate.ddl-auto=update
